@@ -1,3 +1,7 @@
+2006-06-17  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* sample/canvas.rb: Remove Gtk.init.
+
 2006-04-15  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rbgnome-canvas.c: Added G_CHILD_ADD.
